crates/core/talkbank-parser-tests/tests/snapshots/offset_tests__parser_equivalence_word_with_offset.snap
---
source: crates/talkbank-parser-tests/tests/offset_tests.rs
expression: word
---
Some(
    Word {
        span: Span {
            start: 0,
            end: 0,
        },
        word_id: None,
        raw_text: "hello@s",
        content: WordContents(
            [
                Text(
                    WordText(
                        NonEmptyString(
                            "hello",
                        ),
                    ),
                ),
            ],
        ),
        category: None,
        form_type: None,
        lang: Some(
            Shortcut,
        ),
        part_of_speech: None,
        inline_bullet: None,
        cached_cleaned_text: CachedStr(
            OnceLock(
                <uninit>,
            ),
        ),
    },
)
