crates/core/talkbank-parser-tests/tests/snapshots/offset_tests__roundtrip_with_offset@Direct.snap
---
source: crates/talkbank-parser-tests/tests/offset_tests.rs
expression: "(is_semantically_equal, main1, main2)"
---
(
    true,
    MainTier {
        speaker: SpeakerCode(
            "CHI",
        ),
        content: TierContent {
            linkers: TierLinkers(
                [],
            ),
            language_code: None,
            content: TierContentItems(
                [
                    Word(
                        Word {
                            span: Span {
                                start: 106,
                                end: 111,
                            },
                            word_id: None,
                            raw_text: "hello",
                            content: WordContents(
                                [
                                    Text(
                                        WordText(
                                            NonEmptyString(
                                                "hello",
                                            ),
                                        ),
                                    ),
                                ],
                            ),
                            category: None,
                            form_type: None,
                            lang: None,
                            part_of_speech: None,
                            inline_bullet: None,
                            cached_cleaned_text: CachedStr(
                                OnceLock(
                                    <uninit>,
                                ),
                            ),
                        },
                    ),
                    Word(
                        Word {
                            span: Span {
                                start: 112,
                                end: 117,
                            },
                            word_id: None,
                            raw_text: "world",
                            content: WordContents(
                                [
                                    Text(
                                        WordText(
                                            NonEmptyString(
                                                "world",
                                            ),
                                        ),
                                    ),
                                ],
                            ),
                            category: None,
                            form_type: None,
                            lang: None,
                            part_of_speech: None,
                            inline_bullet: None,
                            cached_cleaned_text: CachedStr(
                                OnceLock(
                                    <uninit>,
                                ),
                            ),
                        },
                    ),
                ],
            ),
            terminator: Some(
                Period {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                },
            ),
            postcodes: TierPostcodes(
                [],
            ),
            bullet: None,
            content_span: None,
        },
        span: Span {
            start: 100,
            end: 119,
        },
        speaker_span: Span {
            start: 101,
            end: 104,
        },
    },
    MainTier {
        speaker: SpeakerCode(
            "CHI",
        ),
        content: TierContent {
            linkers: TierLinkers(
                [],
            ),
            language_code: None,
            content: TierContentItems(
                [
                    Word(
                        Word {
                            span: Span {
                                start: 106,
                                end: 111,
                            },
                            word_id: None,
                            raw_text: "hello",
                            content: WordContents(
                                [
                                    Text(
                                        WordText(
                                            NonEmptyString(
                                                "hello",
                                            ),
                                        ),
                                    ),
                                ],
                            ),
                            category: None,
                            form_type: None,
                            lang: None,
                            part_of_speech: None,
                            inline_bullet: None,
                            cached_cleaned_text: CachedStr(
                                OnceLock(
                                    <uninit>,
                                ),
                            ),
                        },
                    ),
                    Word(
                        Word {
                            span: Span {
                                start: 112,
                                end: 117,
                            },
                            word_id: None,
                            raw_text: "world",
                            content: WordContents(
                                [
                                    Text(
                                        WordText(
                                            NonEmptyString(
                                                "world",
                                            ),
                                        ),
                                    ),
                                ],
                            ),
                            category: None,
                            form_type: None,
                            lang: None,
                            part_of_speech: None,
                            inline_bullet: None,
                            cached_cleaned_text: CachedStr(
                                OnceLock(
                                    <uninit>,
                                ),
                            ),
                        },
                    ),
                ],
            ),
            terminator: Some(
                Period {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                },
            ),
            postcodes: TierPostcodes(
                [],
            ),
            bullet: None,
            content_span: None,
        },
        span: Span {
            start: 100,
            end: 119,
        },
        speaker_span: Span {
            start: 101,
            end: 104,
        },
    },
)
