crates/core/talkbank-parser-tests/tests/snapshots/offset_tests__roundtrip_with_offset@TreeSitter.snap
---
source: crates/talkbank-parser-tests/tests/offset_tests.rs
expression: "(is_semantically_equal, main1, main2)"
---
(
    true,
    MainTier {
        speaker: SpeakerCode(
            "CHI",
        ),
        content: TierContent {
            linkers: TierLinkers(
                [],
            ),
            language_code: None,
            content: TierContentItems(
                [
                    Word(
                        Word {
                            span: Span {
                                start: 5,
                                end: 10,
                            },
                            word_id: None,
                            raw_text: "hello",
                            content: WordContents(
                                [
                                    Text(
                                        WordText(
                                            NonEmptyString(
                                                "hello",
                                            ),
                                        ),
                                    ),
                                ],
                            ),
                            category: None,
                            form_type: None,
                            lang: None,
                            part_of_speech: None,
                            inline_bullet: None,
                            cached_cleaned_text: CachedStr(
                                OnceLock(
                                    <uninit>,
                                ),
                            ),
                        },
                    ),
                    Word(
                        Word {
                            span: Span {
                                start: 11,
                                end: 16,
                            },
                            word_id: None,
                            raw_text: "world",
                            content: WordContents(
                                [
                                    Text(
                                        WordText(
                                            NonEmptyString(
                                                "world",
                                            ),
                                        ),
                                    ),
                                ],
                            ),
                            category: None,
                            form_type: None,
                            lang: None,
                            part_of_speech: None,
                            inline_bullet: None,
                            cached_cleaned_text: CachedStr(
                                OnceLock(
                                    <uninit>,
                                ),
                            ),
                        },
                    ),
                ],
            ),
            terminator: Some(
                Period {
                    span: Span {
                        start: 17,
                        end: 18,
                    },
                },
            ),
            postcodes: TierPostcodes(
                [],
            ),
            bullet: None,
            content_span: Some(
                Span {
                    start: 4,
                    end: 19,
                },
            ),
        },
        span: Span {
            start: 0,
            end: 19,
        },
        speaker_span: Span {
            start: 0,
            end: 3,
        },
    },
    MainTier {
        speaker: SpeakerCode(
            "CHI",
        ),
        content: TierContent {
            linkers: TierLinkers(
                [],
            ),
            language_code: None,
            content: TierContentItems(
                [
                    Word(
                        Word {
                            span: Span {
                                start: 5,
                                end: 10,
                            },
                            word_id: None,
                            raw_text: "hello",
                            content: WordContents(
                                [
                                    Text(
                                        WordText(
                                            NonEmptyString(
                                                "hello",
                                            ),
                                        ),
                                    ),
                                ],
                            ),
                            category: None,
                            form_type: None,
                            lang: None,
                            part_of_speech: None,
                            inline_bullet: None,
                            cached_cleaned_text: CachedStr(
                                OnceLock(
                                    <uninit>,
                                ),
                            ),
                        },
                    ),
                    Word(
                        Word {
                            span: Span {
                                start: 11,
                                end: 16,
                            },
                            word_id: None,
                            raw_text: "world",
                            content: WordContents(
                                [
                                    Text(
                                        WordText(
                                            NonEmptyString(
                                                "world",
                                            ),
                                        ),
                                    ),
                                ],
                            ),
                            category: None,
                            form_type: None,
                            lang: None,
                            part_of_speech: None,
                            inline_bullet: None,
                            cached_cleaned_text: CachedStr(
                                OnceLock(
                                    <uninit>,
                                ),
                            ),
                        },
                    ),
                ],
            ),
            terminator: Some(
                Period {
                    span: Span {
                        start: 17,
                        end: 18,
                    },
                },
            ),
            postcodes: TierPostcodes(
                [],
            ),
            bullet: None,
            content_span: Some(
                Span {
                    start: 4,
                    end: 19,
                },
            ),
        },
        span: Span {
            start: 0,
            end: 19,
        },
        speaker_span: Span {
            start: 0,
            end: 3,
        },
    },
)
